# dogm

./: CMakeLists.txt  README.md  belief_propagation.cpp  belief_propagation.cpp.old  belief_propagation.h  chkpt2cpu.cpp  configure_cmd  configure_cmd_lipn-gpu  cplex_test.cpp  gnndataset.h  gnngraph.h  message_passing.h  metis_graph.h  mis.cpp  mis.h  mis_er_dataset.cpp  mis_test_nocopy.cpp  mis_train.cpp  mis_train_lazy.cpp  mis_train_lazy_nocopy.cpp  mis_train_nocopy.cpp  read_metis_graph.cpp  string_utils.h  test.cpp  test_dataset.cpp  test_mplbp.cpp  torch_boost_cplex_example.cpp
utils/: kamis_solve_dataset.py  plot_mis_solutions.py  plot_test_output.py  plot_train_data.py
